--- a/ucr_hbs/app/views/database/search.html.erb
+++ b/ucr_hbs/app/views/database/search.html.erb
@@ -1,4 +1,16 @@
+<HTML>
+
 <h1>Database#search</h1>
+
+<body>
 <p>Find me in app/views/database/search.html.erb</p>
-<%= @hotelList %>
-<%= @hotelId %>
+
+
+<p>Hotel Id: <%=@hotel.hotelId %><br/></p>
+<p>Hotel City: <%=@hotel.city %><br/></p>
+<p>Hotel State: <%=@hotel.stateProvinceCode %><br/></p>
+<p>Hotel Description: <%=@hotel.shortDescription %><br/></p>
+<p>Hotel Image: <%=@hotel.url %><br/> </p>
+
+</body>
+</HTML>
