Played with Front end files. Added jumbotron. Changed Navbar to redirect to home

--- a/ucr_hbs/app/views/layouts/application.html.erb
+++ b/ucr_hbs/app/views/layouts/application.html.erb
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ we<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -45,7 +45,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">UCR Hotel Booking System</a>
+        <a class="navbar-brand" href="/">UCR Hotel Booking System</a>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav">
 			  <% if user_signed_in? %>
@@ -62,7 +62,7 @@
         </div>
       </div>
     </div>
-
+    
     <div class="container">
       <div class="row">
         <div class="col-lg-9">
