--- a/ucr_hbs/app/views/welcome/index.html.erb
+++ b/ucr_hbs/app/views/welcome/index.html.erb
@@ -1,2 +1,9 @@
+
+
 <h1>Welcome#index</h1>
+<div class="jumbotron">
+  	<h5>Welcome to OUR COMPANY NAME</h5>
+  	<p>Please make an account to make a reservation!</p>
+  	<p><a class="btn btn-primary btn-lg" href="/users/sign_up" role="button">Create Account</a></p>
+    </div>
 <p>Find me in app/views/welcome/index.html.erb</p>
