--- a/ucr_hbs/app/views/database/search.html.erb
+++ b/ucr_hbs/app/views/database/search.html.erb
@@ -10,7 +10,7 @@
 <p>Hotel City: <%=@hotel.city %><br/></p>
 <p>Hotel State: <%=@hotel.stateProvinceCode %><br/></p>
 <p>Hotel Description: <%=@hotel.shortDescription %><br/></p>
-<p>Hotel Image: <%=@hotel.url %><br/> </p>
+<!--><p>Hotel Image: <%=@hotel.url %><br/> </p> -->
 
 </body>
 </HTML>
