--- a/ucr_hbs/app/views/welcome/index.html.erb
+++ b/ucr_hbs/app/views/welcome/index.html.erb
@@ -1,2 +1,8 @@
 <h1>Welcome#index</h1>
 <p>Find me in app/views/welcome/index.html.erb</p>
+
+<%= render file: "database/_searchform" %>
+
+<div>
+	<%= @name %>
+</div>
