--- a/ucr_hbs/app/views/welcome/index.html.erb
+++ b/ucr_hbs/app/views/welcome/index.html.erb
@@ -1,9 +1,49 @@
+<!--<p>Find me in app/views/welcome/index.html.erb</p>-->
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <!-- Carousel indicators -->
+        <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+        </ol>   
+        <!-- Carousel items -->
+        <div class="carousel-inner">
+            <div class="item active">
+		<img src="http://cdn2.thegloss.com/wp-content/uploads/2010/11/bates-motel-280x154.jpg" alt="" />
+                <!--<h2>Slide 1</h2>-->
+                <div class="carousel-caption">
+                  <h3>First slide label</h3>
+                  <p>Lorem ipsum dolor sit amet consectetur…</p>
+                </div>
+            </div>
+            <div class="item">
+		<img src="http://www.soundonsight.org/wp-content/uploads/2013/01/Bates-motel-500x250.jpg" alt="" />
+                <!--<h2>Slide 2</h2>-->
+                <div class="carousel-caption">
+                  <h3>Second slide label</h3>
+                  <p>Aliquam sit amet gravida nibh, facilisis gravida…</p>
+                </div>
+            </div>
+            <div class="item">
+		<img src="http://cdn1.locumslifestyle.org/wp-content/uploads/Bates-Motel-Psycho.jpg" alt="" />
+                <!--<h2>Slide 3</h2>-->
+                <div class="carousel-caption">
+                  <h3>Third slide label</h3>
+                  <p>Praesent commodo cursus magna vel…</p>
+                </div>
+            </div>
+        </div>
+        <!-- Carousel nav -->
+        <a class="carousel-control left" href="#myCarousel" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+        </a>
+        <a class="carousel-control right" href="#myCarousel" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+        </a>
+    </div>
 
-
-<h1>Welcome#index</h1>
 <div class="jumbotron">
   	<h5>Welcome to OUR COMPANY NAME</h5>
   	<p>Please make an account to make a reservation!</p>
   	<p><a class="btn btn-primary btn-lg" href="/users/sign_up" role="button">Create Account</a></p>
     </div>
-<p>Find me in app/views/welcome/index.html.erb</p>
