Added search form and implemented global storage.

--- a/ucr_hbs/app/views/welcome/index.html.erb
+++ b/ucr_hbs/app/views/welcome/index.html.erb
@@ -4,5 +4,6 @@
 <%= render file: "database/_searchform" %>
 
 <div>
-	<%= @name %>
+	<%= @search_params[:name] %>
+	<%= @search_params[:city] %>
 </div>
