--- a/ucr_hbs/app/views/database/_searchform.html.erb
+++ b/ucr_hbs/app/views/database/_searchform.html.erb
@@ -3,21 +3,20 @@
 <legend>Search for Hotels</legend>
 <div class="form-group">
 	<%= text_field_tag(:name, nil, placeholder: 'Name') %> 
+	<%= text_field_tag(:poi, nil, placeholder: 'Point of Interest') %> 
 	</div>
 	<div class="form-group">
-		
 		<%= text_field_tag(:city, nil, placeholder: 'City') %> 
 		<%= text_field_tag(:state, nil, placeholder: 'State/Province') %>
-		</div>
+	</div>
 	<div class="form-group">
 		<%= label_tag(:arrival	, "Arrival Date") %>
 		<%= select_date Date.today, prefix: :start_date, min: Date.today %>&nbsp;
 		<%= label_tag(:departure, "Departure Date") %>
 		<%= select_date Date.today+1, prefix: :departure %>
 	</div>
-   
-   <div class="form-actions">
+    <div class="form-actions">
 	<%= submit_tag("Search") %>
-   </div>
+    </div>
 <% end %>
 </div>
