Added the payment-reservation page.

--- a/ucr_hbs/app/views/layouts/application.html.erb
+++ b/ucr_hbs/app/views/layouts/application.html.erb
@@ -83,7 +83,7 @@
       </div><!--/row-->
 
       <footer>
-        <p>&copy; Company 2014</p>
+        <p>&copy; Hotel Homie 2014</p>
       </footer>
 
     </div> <!-- /container -->
