--- a/ucr_hbs/app/views/database/getList.html.erb
+++ b/ucr_hbs/app/views/database/getList.html.erb
@@ -1,31 +1,22 @@
 <HTML>
 
-<h1>Database#search</h1>
+<h1>Select a Hotel</h1>
 
 <body>
-<p>Find me in app/views/database/search.html.erb</p>
 
-
-
-<p> Destination List size: <%= @destinationListSize%></p>
-
-<% (0..(@destinationListSize)).each do |i| %>
-
-	<p> Destination ID: <%=@destinationList[i].destinationId %></p>
-	<p> Destination City: <%=@destinationList[i].city %></p>
-	<p> Destination State: <%=@destinationList[i].stateProvinceCode %></p>
-	<p> Destination Country: <%=@destinationList[i].countryName %></p>
+<% (0..(@hotelListSize)).each do |i| %>
 	
-	<p>------------------------------------------------------------------</p>
-
+	<div class="jumbotron">
+			<legend><%=@hotelList[i].name %></legend>
+			<div class="form-group">
+				<p> City: <%=@hotelList[i].city %></p>
+				<p> Price: <%=@hotelList[i].hotelPrice %></p>
+				<p> User Rating: <%=@hotelList[i].hotelRating %></p>
+				<p> Star Level: </p>
+				<p> Thumbnail: </p>
+			</div>
+		<%= button_to "Select", {:action =>"getHotelInfo", :controller => "database", :hotelId => @hotelList[i].hotelId } %>
+	</div>
 <% end %>
-
-
-<p> Response: <%= @response %></p>
-
-
-
-
-
 </body>
 </HTML>
