--- a/ucr_hbs/app/views/welcome/hotel.html
+++ b/ucr_hbs/app/views/welcome/hotel.html
@@ -17,12 +17,7 @@
     <!-- Custom CSS -->
     <link href="css/blog-post.css" rel="stylesheet">
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+
 
 </head>
 
@@ -71,7 +66,7 @@
                 <!-- Blog Post -->
 
                 <!-- Title -->
-                <h1>Blog Post Title</h1>
+                <h1>Hotel Title</h1>
 
                 <!-- Author -->
                 <p class="lead">
@@ -80,10 +75,7 @@
 
                 <hr>
 
-                <!-- Date/Time -->
-                <p><span class="glyphicon glyphicon-time"></span> Posted on August 24, 2013 at 9:00 PM</p>
 
-                <hr>
 
                 <!-- Preview Image -->
                 <img class="img-responsive" src="http://placehold.it/900x300" alt="">
@@ -102,6 +94,7 @@
                 <!-- Blog Reviews -->
 
                 <!-- Reviews Form -->
+
                 <div class="well">
                     <h4>Leave a Review:</h4>
                     <form role="form">
@@ -113,7 +106,6 @@
                 </div>
 
                 <hr>
-
                 <!-- Posted Reviews -->
 
                 <!-- Review -->
@@ -157,12 +149,12 @@
 
             </div>
 
-            <!-- Blog Sidebar Widgets Column -->
+            <!-- Hotel Sidebar Widgets Column -->
             <div class="col-md-4">
 
                 <!-- Blog Search Well -->
                 <div class="well">
-                    <h4>Blog Search</h4>
+                    <h4>Hotel Search</h4>
                     <div class="input-group">
                         <input type="text" class="form-control">
                         <span class="input-group-btn">
@@ -176,7 +168,7 @@
 
                 <!-- Blog Categories Well -->
                 <div class="well">
-                    <h4>Blog Categories</h4>
+                    <h4>Hotel Categories</h4>
                     <div class="row">
                         <div class="col-lg-6">
                             <ul class="list-unstyled">
