--- a/ucr_hbs/app/views/welcome/hotel.html
+++ b/ucr_hbs/app/views/welcome/hotel.html
@@ -83,11 +83,7 @@
                 <hr>
 
                 <!-- Post Content -->
-                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, vero, obcaecati, aut, error quam sapiente nemo saepe quibusdam sit excepturi nam quia corporis eligendi eos magni recusandae laborum minus inventore?</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, tenetur natus doloremque laborum quos iste ipsum rerum obcaecati impedit odit illo dolorum ab tempora nihil dicta earum fugiat. Temporibus, voluptatibus.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, doloribus, dolorem iusto blanditiis unde eius illum consequuntur neque dicta incidunt ullam ea hic porro optio ratione repellat perspiciatis. Enim, iure!</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, nostrum, aliquid, animi, ut quas placeat totam sunt tempora commodi nihil ullam alias modi dicta saepe minima ab quo voluptatem obcaecati?</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, dolor quis. Sunt, ut, explicabo, aliquam tenetur ratione tempore quidem voluptates cupiditate voluptas illo saepe quaerat numquam recusandae? Qui, necessitatibus, est!</p>
+                <p class="lead">Description</p>
 
                 <hr>
 
@@ -187,9 +183,25 @@
 
                 <!-- Side Widget Well -->
                 <div class="well">
-                    <h4>Side Widget Well</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, perspiciatis adipisci accusamus laudantium odit aliquam repellat tempore quos aspernatur vero.</p>
-                </div>
+                    <h4>Aminities</h4>
+                    <ul>
+                      <li>AM1</li>
+                      <li>AM2</li>
+                      <li>AM3</li>
+                      <li>AM1</li>
+                      <li>AM2</li>
+                      <li>AM3</li>
+                      <li>AM1</li>
+                      <li>AM2</li>
+                      <li>AM3</li>
+                      <li>AM1</li>
+                      <li>AM2</li>
+                      <li>AM3</li>
+                      <li>AM1</li>
+                      <li>AM2</li>
+                      <li>AM3</li>
+                    </ul>
+
 
             </div>
 
