Added confirmation page

--- a/ucr_hbs/app/views/database/reserve.html.erb
+++ b/ucr_hbs/app/views/database/reserve.html.erb
@@ -11,7 +11,7 @@ Holiday Inn, 2 guests <br>
 	<br>
 	Credit card number <%= text_field_tag(:ccn, nil) %> 
 	<br>
-	CVS	<%= text_field_tag(:cvs, nil) %> 
+	CVC	<%= text_field_tag(:cvc, nil) %> 
 	<br>
 	Expiration date (MM/DD/YYYY) <%= text_field_tag(:expdate, nil) %>
 	<br>
