--- a/ucr_hbs/app/views/layouts/application.html.erb
+++ b/ucr_hbs/app/views/layouts/application.html.erb
@@ -45,13 +45,13 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">UCR Hotel Booking System</a>
+        <a class="navbar-brand" href="">UCR Hotel Booking System</a>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav">
 			  <% if user_signed_in? %>
 			  <li><% "Currently signed in." %></li>
 			  <li><%= link_to "Sign Out", destroy_user_session_path, :method => :delete %></li>
-			  <li><%= link_to "Make a Reservation", "/path3"  %></li>
+			  <li><%= link_to "My Profile", welcome_user_profile_path  %></li>
 			  <% else %>
               <li><%= link_to "Login", new_user_session_path  %></li>
               <li><%= link_to "Register", new_user_registration_path  %></li>
@@ -70,15 +70,7 @@
           <%= yield %>
         </div>
         <div class="col-lg-3">
-          <div class="well sidebar-nav">
-            <h3>Sidebar</h3>
-            <ul class="nav nav-list">
-              <li class="nav-header">Sidebar</li>
-              <li><%= link_to "Link1", "/path1"  %></li>
-              <li><%= link_to "Link2", "/path2"  %></li>
-              <li><%= link_to "Link3", "/path3"  %></li>
-            </ul>
-          </div><!--/.well -->
+
         </div><!--/span-->
       </div><!--/row-->
 
