added the confirmation page

--- a/ucr_hbs/app/views/reservations/confirmation.html.erb
+++ b/ucr_hbs/app/views/reservations/confirmation.html.erb
@@ -1,9 +1,16 @@
-<div class="jumbotron">
-	<h1>Reservation Summary</h1>
-		<p>Hotel <%= raw $name %></p>
-		<p>City <%= $city %></p>
-		<p>Arrival <%= $arrival %></p>
-		<p>Departure <%= $departure %></p>
-		<p>Price <%= $price %></p>
-		<%= button_to "Make Reservation", {:controller => "reservations", :action => "create"}, :method => "post" %>
-</div>
+<h1 style="color:turquoise">Congratulations! <br>
+<small>You have successfully reserved your stay at </small>
+<small>Comfort Inn</small><!--hotel name goes here-->
+<small> in </small>
+<small>Hawaii, USA.</small></h1> <!--location goes here-->
+
+<br>
+<br><br>
+Feel free to review this hotel after your stay. <br>
+If you would like to make changes to your reservation, please go to your Profile page.
+
+
+
+
+</body><br>
+
