Removed carousel on the home page. Also linked error page back to the home page

--- a/ucr_hbs/app/views/database/errorPage.html.erb
+++ b/ucr_hbs/app/views/database/errorPage.html.erb
@@ -1,4 +1,4 @@
-<h3>Sorry, your search wasn't specific enough. Please <a href="#">go back</a> and try again.</h3>
+<h3>Sorry, your search wasn't specific enough. Please <%= link_to "go back", root_url  %> and try again.</h3>
 
 
 <img src="/assets/IDK_reaction_face.png" alt="...">
