--- a/ucr_hbs/app/views/reservations/confirmation.html.erb
+++ b/ucr_hbs/app/views/reservations/confirmation.html.erb
@@ -1,16 +1,17 @@
-<h1 style="color:turquoise">Congratulations! <br>
-<small>You have successfully reserved your stay at </small>
-<small>Comfort Inn</small><!--hotel name goes here-->
-<small> in </small>
-<small>Hawaii, USA.</small></h1> <!--location goes here-->
+<h2>Reservation Summary</h2>
+<h2><small>Please confirm your reservation at </small><small style="color:turquoise"><%= $name %></small> 
+												<small> in </small>
+												<small style="color:turquoise"><%= $city %></small>
+												<small> from </small>
+												<br>
+												<small style="color:turquoise"><%= $arrival %></small>
+												<small> to </small>
+												<small style="color:turquoise"><%= $departure %></small></h2>
 
 <br>
+<h2> 	<small>A total of </small>
+		<small style="color:green">$<%= $price %></small>
+		<small>will be charged to your credit card</small>
+</h2>
 <br><br>
-Feel free to review this hotel after your stay. <br>
-If you would like to make changes to your reservation, please go to your Profile page.
-
-
-
-
-</body><br>
-
+<%= button_to "Make Reservation", {controller: "reservations", action: "create", method: "post"}, {class: 'btn btn-primary'}%> 
