Added reviews to the hotel profile page and fixed a bug where reservations were not storing the hotel id.

--- a/ucr_hbs/app/views/database/hotelInfo.html.erb
+++ b/ucr_hbs/app/views/database/hotelInfo.html.erb
@@ -124,44 +124,19 @@
                 <!-- Posted Reviews -->
 
                 <!-- Review -->
+				<% Review.where(:hotel_id => @hotel.hotelId).each do |review| %>
                 <div class="media">
                     <a class="pull-left" href="#">
                         <img class="media-object" src="http://placehold.it/64x64" alt="">
                     </a>
                     <div class="media-body">
-                        <h4 class="media-heading">Home
-                            <small>August 25, 2014 at 9:30 PM</small>
+                        <h4 class="media-heading"> <%= review.user.email %>
+                            <small><%= review.created_at.to_formatted_s(:long_ordinal) %></small>
                         </h4>
-                        Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+                        <%= review.body %>
                     </div>
                 </div>
-
-                <!-- Review -->
-                <div class="media">
-                    <a class="pull-left" href="#">
-                        <img class="media-object" src="http://placehold.it/64x64" alt="">
-                    </a>
-                    <div class="media-body">
-                        <h4 class="media-heading">Home
-                            <small>August 25, 2014 at 9:30 PM</small>
-                        </h4>
-                        Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-                        <!-- Nested Review -->
-                        <div class="media">
-                            <a class="pull-left" href="#">
-                                <img class="media-object" src="http://placehold.it/64x64" alt="">
-                            </a>
-                            <div class="media-body">
-                                <h4 class="media-heading">Review
-                                    <small>August 25, 2014 at 9:30 PM</small>
-                                </h4>
-                                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-                            </div>
-                        </div>
-                        <!-- End Nested Review -->
-                    </div>
-                </div>
-
+				<% end %>
             </div>
 
             <!-- Hotel Sidebar Widgets Column -->
