--- a/ucr_hbs/app/views/welcome/index.html.erb
+++ b/ucr_hbs/app/views/welcome/index.html.erb
@@ -8,7 +8,7 @@
         <!-- Carousel items -->
         <div class="carousel-inner">
             <div class="item active">
-		<img src="http://www.jasper-group.com/blog/wp-content/uploads/2014/09/hotels.jpg" alt="" />
+		<img src="http://www.desktophdwallpaper.com/wp-content/uploads/wallpapers/HD/Water-Hotel-Fresh-New-Hd-Wallpaper.jpg" alt="" />
                 <!--<h2>Slide 1</h2>-->
                 <div class="carousel-caption">
                   <h3>First slide label</h3>
