Fixed a few misplaced characters in the last commit

--- a/ucr_hbs/app/views/reservations/_creditcard.html.erb
+++ b/ucr_hbs/app/views/reservations/_creditcard.html.erb
@@ -1,4 +1,4 @@
-><h1>Payment for your Reservation</h1>
+<h1>Payment for your Reservation</h1>
 
 <%= form_tag :controller => 'reservations', :action => 'validate_credit_card', :method => 'post' do %> 
 <div class="jumbotron">
