Minor changes and fixes to all pages, removal of junk

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,7 +45,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Hotel Homie</a>
+        <a class="navbar-brand" href="http://0.0.0.0:3000">Hotel Homie</a>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav">
 			  <% if user_signed_in? %>
