Major changes and adds to styling and design of pages, some dynamic data needs to be added

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,8 @@
  *= require_tree .
  *= require_self
  */
-<html>
-<title>This is My Layout!</title>
-</html>
+
+#banner-top{
+    top: 40px;
+    left: 40px;
+}
