--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,14 +38,14 @@
   </head>
   <body>
 
-    <div class="navbar navbar-default navbar-static-top">
+    <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="http://0.0.0.0:3000">Hotel Homie</a>
+        <%= link_to "Hotel Homie", welcome_index_path, class: 'navbar-brand' %>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav">
 			  <% if user_signed_in? %>
@@ -63,16 +63,19 @@
         </div>
       </div>
     </div>
-
+<div class="banner-top">
+    <img src="/assets/banner.png" width=1352 height=140>
+</div>
     <div class="container">
+
       <div class="row">
         <div class="col-lg-9">
           <%= bootstrap_flash %>
           <%= yield %>
         </div>
       </div><!--/row-->
-
-      <footer>
+      <hr />
+      <footer class="footer">
         <p>&copy; Hotel Homie 2014</p>
       </footer>
 
