--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -12,6 +12,7 @@ html {
 }
 body {
   margin: 0;
+
 }
 article,
 aside,
@@ -2923,6 +2924,21 @@ fieldset[disabled] .btn-primary.active {
   color: #428bca;
   background-color: #fff;
 }
+.btn-custom {
+    background-color: hsl(215, 82%, 50%) !important;
+    background-repeat: repeat-x;
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#fffffe", endColorstr="#166ee8");
+    background-image: -khtml-gradient(linear, left top, left bottom, from(#fffffe), to(#166ee8));
+    background-image: -moz-linear-gradient(top, #fffffe, #166ee8);
+    background-image: -ms-linear-gradient(top, #fffffe, #166ee8);
+    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #fffffe), color-stop(100%, #166ee8));
+    background-image: -webkit-linear-gradient(top, #fffffe, #166ee8);
+    background-image: -o-linear-gradient(top, #fffffe, #166ee8);
+    background-image: linear-gradient(#fffffe, #166ee8);
+    border-color: #166ee8 #166ee8 hsl(215, 82%, 37.5%); color: #333 !important;
+    text-shadow: 0 1px 1px rgba(255, 255, 255, 0.82);
+    -webkit-font-smoothing: antialiased;
+}
 .btn-success {
   color: #fff;
   background-color: #5cb85c;
@@ -4647,10 +4663,10 @@ a.list-group-item.active > .badge,
   margin-left: 3px;
 }
 .jumbotron {
-  padding: 30px 15px;
-  margin-bottom: 30px;
-  color: inherit;
-  background-color: #eee;
+    padding: 30px 15px;
+    margin-bottom: 30px;
+    color: inherit;
+    background-color: #eee;
 }
 .jumbotron h1,
 .jumbotron .h1 {
