--- a/app/views/database/_searchform.html.erb
+++ b/app/views/database/_searchform.html.erb
@@ -1,3 +1,5 @@
+<div style="opacity: 0.85">
+<div class= "col-md-8">
 <div class="jumbotron">
 <%= form_tag :controller => 'database', :action => 'getList', :method => 'post' do %>
 <legend>Search for Hotels</legend>
@@ -12,6 +14,7 @@
 	<div class="form-group">
 		<%= label_tag(:arrival	, "Arrival Date") %>
 		<%= select_date Date.today, prefix: :start_date, min: Date.today %>&nbsp;
+		<br/>
 		<%= label_tag(:departure, "Departure Date") %>
 		<%= select_date Date.today+1, prefix: :departure %>
 	</div>
@@ -19,4 +22,6 @@
 	<%= submit_tag("Search") %>
     </div>
 <% end %>
+</div>
+</div>
 </div>
