--- a/app/views/database/getList.html.erb
+++ b/app/views/database/getList.html.erb
@@ -1,24 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
  <!-- Page Heading -->
         <div class="row">
             <div class="col-lg-8">
-    
+
                 <h1>Search Results</h1>
 
             </div>
         </div>
-</head>
 <body>
     <!-- Page Content -->
     <div class="container">
-       
+
         <% (0..(@hotelListSize)).each do |i| %>
 			 <!-- /.row -->
 			<div class="row">
-			
+
 				<div class="col-md-4">
 					<br />
 					<a href="#">
@@ -39,14 +34,14 @@
 
 					<h3>
 						<%= raw @hotelList[i].name %>
-						<font size="4"> &nbsp; &nbsp; $<%= @hotelList[i].hotelPrice %></font> 
+						<font size="4"> &nbsp; &nbsp; $<%= @hotelList[i].hotelPrice %></font>
 					</h3>
 
 					<!-- Name / city / price / avg rate + stars / #of reviews / Thumbnail -->
 					<h4>
-						<strong> <%= @hotelList[i].city %> <%= @hotelList[i].stateProvinceCode %> </strong> 
+						<strong> <%= @hotelList[i].city %> <%= @hotelList[i].stateProvinceCode %> </strong>
 							<font size="4">
-								&nbsp; &nbsp; Rating: <%= @hotelList[i].hotelRating %> 
+								&nbsp; &nbsp; Rating: <%= @hotelList[i].hotelRating %>
 								&nbsp; &nbsp; <%=Review.where(:hotel_id => @hotelList[i].hotelId).count %> Review(s)
 							</font>
 					</h4>
@@ -62,7 +57,7 @@
 										:departureDate => @departureDate,
 										:price => @hotelList[i].hotelPrice
 										}%></p>
-					
+
 					<%= button_to "View Hotel", {controller: "database", action: "getHotelInfo", method: "post",
 				            :params => {:hotelId => @hotelList[i].hotelId,
 										:name => @hotelList[i].name,
@@ -70,13 +65,13 @@
 										:arrivalDate => @arrivalDate,
 										:departureDate => @departureDate,
 										:price => @hotelList[i].hotelPrice
-										}}, {class: 'btn btn-primary'} %>
+										}}, {class: 'btn btn-custom'} %>
 					<br /><br />
 				</div>
 				<hr><hr>
             <!-- /.row -->
 			</div>
-			
+
 			<hr>
 			<hr>
         <% end %>
