--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,7 +45,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <%= link_to "Hotel Homie", welcome_index_path, class: 'navbar-brand' %>
+        <%= link_to "Hotel Homie", root_url, class: 'navbar-brand' %>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav">
 			  <% if user_signed_in? %>
@@ -63,18 +63,57 @@
         </div>
       </div>
     </div>
-<div class="banner-top">
-    <img src="/assets/banner.png" width=1352 height=140>
+<div style="">
+    <img src="/assets/banner.png" style="top: 20px;" width=1352 height=140 margin=0>
 </div>
-    <div class="container">
 
+<div class="container">
       <div class="row">
         <div class="col-lg-9">
           <%= bootstrap_flash %>
           <%= yield %>
         </div>
       </div><!--/row-->
-      <hr />
+</div>
+      <!--/ The template for hotels near you etc -->
+      <div class="container">
+      <h3 id="navbar" class="page-header">Best hotel deals near you</h3>
+      <div class="bs-example">
+          <div class="row">
+              <div class="col-sm-6 col-md-4">
+                  <div class="thumbnail">
+                      <img width=300 height=300 src="http://www.rocsgrp.com/wp-content/gallery/aritson-rome/lobby-ariston-hotel-rome-002-300x300.jpg" alt="Picture of hotel">
+                      <div class="caption">
+                          <h3>Hotel name</h3>
+                          <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                          <p><a href="#" class="btn btn-custom" role="button">Reserve</a> <a href="#" class="btn btn-default" role="button">More Info</a></p>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-sm-6 col-md-4">
+                  <div class="thumbnail">
+                      <img width=300 height=300  src="http://www.rarebits.co.uk/uploaded/images/1322946913_tyn-rhos-snowdonia-hotel-exterior-300x300.jpg" alt="Picture of hotel">
+                      <div class="caption">
+                          <h3>Hotel name</h3>
+                          <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                          <p><a href="#" class="btn btn-custom" role="button">Reserve</a> <a href="#" class="btn btn-default" role="button">More Info</a></p>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-sm-6 col-md-4">
+                  <div class="thumbnail">
+                      <img width=300 height=300 src="http://www.otal.com/wp-content/uploads/2012/02/Le-Victoria-Hotel.jpg" alt="">
+                      <div class="caption">
+                          <h3>Hotel name</h3>
+                          <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                          <p><a href="#" class="btn btn-custom" role="button">Reserve</a> <a href="#" class="btn btn-default" role="button">More Info</a></p>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+
+      <hr/>
       <footer class="footer">
         <p>&copy; Hotel Homie 2014</p>
       </footer>
