some minor css, sort buttons added

--- a/app/views/database/getList.html.erb
+++ b/app/views/database/getList.html.erb
@@ -90,3 +90,7 @@
 
         <!-- /.row -->
     </div>
+    <div style="margin-left: 480px;" class="btn-toolbar" role="toolbar" aria-label="...">
+        <button class="btn-group btn btn-info" type="button">Prev</button>
+        <button class="btn-group btn btn-info" type="button">Next</button>
+    </div>
