--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -64,7 +64,7 @@
       </div>
     </div>
 <div style="">
-    <img src="/assets/banner.png" style="top: 20px;" width=1352 height=140 margin=0>
+    <img src="/assets/banner.png" width=100% height=140 margin=0>
 </div>
 
 <div class="container">
