--- a/app/views/database/_searchform.html.erb
+++ b/app/views/database/_searchform.html.erb
@@ -1,12 +1,12 @@
 <div class="jumbotron">
-<%= form_tag :controller => 'database', :action => 'getList', :method => 'post' do %> 
+<%= form_tag :controller => 'database', :action => 'getList', :method => 'post' do %>
 <legend>Search for Hotels</legend>
 <div class="form-group">
-	<%= text_field_tag(:name, nil, placeholder: 'Name') %> 
-	<%= text_field_tag(:poi, nil, placeholder: 'Point of Interest') %> 
+	<%= text_field_tag(:name, nil, placeholder: 'Name') %>
+	<%= text_field_tag(:poi, nil, placeholder: 'Point of Interest') %>
 	</div>
 	<div class="form-group">
-		<%= text_field_tag(:city, nil, placeholder: 'City') %> 
+		<%= text_field_tag(:city, nil, placeholder: 'City') %>
 		<%= text_field_tag(:state, nil, placeholder: 'State/Province') %>
 	</div>
 	<div class="form-group">
@@ -15,6 +15,72 @@
 		<%= label_tag(:departure, "Departure Date") %>
 		<%= select_date Date.today+1, prefix: :departure %>
 	</div>
+	<div class="form-group">
+		<legend>Filters</legend>
+		<b>Rating: &nbsp; &nbsp;</b>
+									<b>0 &nbsp;</b>
+									<input id="star_rating_slider" data-slider-id="star_rating_slider_style" type="text" class="span2" value=""
+									data-slider-min="0" data-slider-max="5"
+									data-slider-step="0.5" data-slider-value="[0,5]"/>
+									<b>&nbsp; 5</b>
+
+		<%= hidden_field_tag :starRange, "0,5" %>
+	</div>
+	<div class="form-group">
+		<b>Price interval: &nbsp;</b>
+									<b>$0 &nbsp;</b>
+									<input id="price_slider" data-slider-id="price_slider_style"
+									type="text" class="span2" value=""
+									data-slider-min="10" data-slider-max="500"
+									data-slider-step="5" data-slider-value="[10,500]"/>
+									<b>&nbsp; $500</b>
+
+
+		<%= hidden_field_tag :priceRange, "0,500" %>
+
+		<script>
+
+		var priceChange	= function()
+		{
+			$("#priceRange").val($('#price_slider').val());
+		};
+
+		var starChange = function()
+		{
+			$("#starRange").val($('#star_rating_slider').val());
+		}
+
+		$("#star_rating_slider").slider()
+								 .on('slide', starChange)
+								 .data('slider');
+
+		$("#price_slider").slider()
+							.on('slide', priceChange)
+							.data('slider');
+
+
+		</script>
+	</div>
+	<div class="form-group">
+		<b>Amenities:</b>
+		<div style="width: 300px;height: 100px;overflow-x:scroll;overflow-y:auto;">
+			<ul>
+				<% @amenityMasks.each do |amenity| %>
+					<li>
+						<%= check_box_tag "amenities[]", amenity.bitMask %>
+						<label><%= amenity.amenityName %></label>
+					</li>
+				<% end %>
+			</ul>
+		</div>
+	</div>
+
+	<script>
+		$('.dropdown-menu').click(function(e) {
+			e.stopPropagation();
+		});
+	</script>
+
     <div class="form-actions">
 	<%= submit_tag("Search") %>
     </div>
