--- a/ucr_hbs/app/views/welcome/user_profile.html.erb
+++ b/ucr_hbs/app/views/welcome/user_profile.html.erb
@@ -64,5 +64,9 @@
   </table>
 </div>
 
-<%= button_to 'Change Password', edit_user_registration_path, :class => "button", :method => :get %>
+<div class="btn-group" role="group" aria-label="...">
+	  <%= link_to 'Change Password', edit_user_registration_path, :method => :get, :class => "btn btn-default" %>  
+  	 <%= link_to 'Edit Default Payment Information', '/welcome/payment_info', :method => :get, :class => "btn btn-default" %>
+</div>
+
 <p></p>
