--- a/app/views/database/getList.html.erb
+++ b/app/views/database/getList.html.erb
@@ -6,19 +6,21 @@
 
                 <h5>Sort by:
 
-                <span class="btn-group" data-toggle="buttons-radio">
-                    <button type="button" data-toggle="button" class="btn btn-sort btn-sm " name="sort" value="PRICE">Price</button>
-                    <button type="button" data-toggle="button" class="btn btn-sort btn-sm " name="sort" value="PROXIMITY">Distance</button>
-                    <button type="button" data-toggle="button"  class="btn btn-sort btn-sm " name="sort" value="QUALITY">star rating</button>
 
-                </span>
+
+                    <%= button_to 'price', :controller => 'database', :action => 'getList', :method => 'post', :params => {:sort => 'PRICE'} %>
+                    <%= button_to 'quality', :controller => 'database', :action => 'getList', :method => 'post', :params => {:sort => 'QUALITY'} %>
+                    <%= button_to 'distance', :controller => 'database', :action => 'getList', :method => 'post', :params => {:sort => 'PROXIMITY'} %>
+
+
+
                 </h5>
             </div>
 
         </div>
 
     <!-- Page Content -->
-    <div class="container">
+    <div class="container" >
 
 
         <% (0..(@hotelListSize)).each do |i| %>
@@ -88,7 +90,6 @@
             <hr />
         <% end %>
 
-        <!-- /.row -->
     </div>
     <div style="margin-left: 480px;" class="btn-toolbar" role="toolbar" aria-label="...">
         <button class="btn-group btn btn-info" type="button">Prev</button>
